Making CMake scripts more modifiable
Best if shader sources etc. could go to examples_tests/media

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF) #...without compiler extensions like gnu++11, but is it really needed?
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
+
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type: Debug or Release" FORCE)
 endif()
@@ -15,6 +17,7 @@ option(BUILD_EXAMPLES "Enable building examples" ON)
 
 option(BUILD_TOOLS "Enable building tools (just convert2BAW as for now)" ON)
 
+option(NASTY_OPENSSL_WORKAROUND "Do not check this on if you actually want to build Irrlicht; just for cmake scripts testing purposes" OFF)
 add_subdirectory(source/Irrlicht) # Irrlicht code
 
 if(BUILD_TOOLS)
