--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,12 @@ macro(irr_adjust_flags)
 			-mfpmath=sse
 			-fno-omit-frame-pointer
 			-fstack-protector-strong
+			-fuse-ld=gold
 			"$<$<CONFIG:RELEASE>:-O3>"
 			"$<$<CONFIG:RELEASE>:-fexpensive-optimizations>"
+		)
+		link_libraries(
+			-fuse-ld=gold
 		)
 		if(FAST_MATH) # TODO: check with make VERBOSE=1 that it gets added to all target objects C++ and C
 			add_compile_options(
@@ -47,14 +51,40 @@ macro(irr_adjust_flags)
 		string(REPLACE "/GS" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}") # for some reason simply replacing /GS -> /GS- doesn't work... so it vanishes here and appears a few lines below!
 		string(REPLACE "/O2" "/Ox" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 		string(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL /MP /Gy- /Zc:wchar_t /Zi /sdl- /GF- /Ot /Qpar- /GS-")
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL /MP /Gy- /Zc:wchar_t /Zi /sdl- /GF- /Ot /Qpar- /GS- /Oy /Oi")
 		string(REPLACE "/GS" "/GS-" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
 		string(REPLACE "/O2" "/Ox" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
 		string(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
-		set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /GL /MP /Gy- /Zc:wchar_t /Zi /sdl- /GF- /Ot /Qpar- /GS-")
+		set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /GL /MP /Gy- /Zc:wchar_t /Zi /sdl- /GF- /Ot /Qpar- /GS- /Oy /Oi")
 	else()
 		message(WARNING "UNTESTED COMPILER DETECTED, EXPECT WRONG OPTIMIZATION FLAGS! SUBMIT ISSUE ON GITHUB https://github.com/buildaworldnet/IrrlichtBAW/issues")
 	endif()
+endmacro()
+
+macro(irr_adjust_definitions)
+	add_definitions(
+		-DPNG_THREAD_UNSAFE_OK
+		-DPNG_NO_MMX_CODE
+		-DPNG_NO_MNG_FEATURES
+		-D_7ZIP_ST
+		-DSPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS
+	)
+
+	if(WIN32)
+		add_definitions(
+			-DWIN32
+			-D__GNUWIN32__
+			-D_CRT_SECURE_NO_DEPRECATE
+			-DNOMINMAX
+		)
+	endif()
+
+	if(FAST_MATH)
+		add_definitions(-DIRRLICHT_FAST_MATH)
+	endif()
+	
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG")
 endmacro()
 
 option(FAST_MATH "Enable fast low-precision math" ON)
