--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -365,6 +365,8 @@
 		<Unit filename="../../include/irr/core/alloc/IAddressAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/IAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/LinearAddressAllocator.h" />
+		<Unit filename="../../include/irr/core/alloc/PoolAddressAllocator.h" />
+		<Unit filename="../../include/irr/core/alloc/StackAddressAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/address_type_traits.h" />
 		<Unit filename="../../include/irr/core/alloc/aligned_allocator.h" />
 		<Unit filename="../../include/irr/core/alloc/aligned_allocator_adaptor.h" />
