correct bad CMake syntax

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -333,7 +333,7 @@ macro(irr_target_link_openssl _trgt)
 			target_link_libraries(${_trgt} INTERFACE
 				../../../openssl/crypto.a
 			)
-		elif (WIN32)
+		elseif (WIN32)
 			target_link_libraries(${_trgt} INTERFACE
 				../../../openssl/lib/libeay32.lib
 			)
