--- a/source/Irrlicht/Irrlicht10.0.vcxproj.filters
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CDefaultSceneNodeAnimatorFactory.cpp" />
-    <ClCompile Include="CDefaultSceneNodeFactory.cpp" />
     <ClCompile Include="CGeometryCreator.cpp" />
     <ClCompile Include="CGPUTransientBuffer.cpp" />
     <ClCompile Include="CIrrDeviceWin32.cpp" />
@@ -23,18 +21,13 @@
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="C3DSMeshFileLoader.cpp" />
     <ClCompile Include="CSkinnedMeshSceneNode.cpp" />
-    <ClCompile Include="CSMFMeshFileLoader.cpp" />
-    <ClCompile Include="CAnimatedMeshHalfLife.cpp" />
     <ClCompile Include="CB3DMeshFileLoader.cpp" />
-    <ClCompile Include="CCSMLoader.cpp" />
-    <ClCompile Include="CDMFLoader.cpp" />
     <ClCompile Include="CLMTSMeshFileLoader.cpp" />
     <ClCompile Include="CLWOMeshFileLoader.cpp" />
     <ClCompile Include="CMS3DMeshFileLoader.cpp" />
     <ClCompile Include="CMY3DMeshFileLoader.cpp" />
     <ClCompile Include="COBJMeshFileLoader.cpp" />
     <ClCompile Include="COCTLoader.cpp" />
-    <ClCompile Include="COgreMeshFileLoader.cpp" />
     <ClCompile Include="CPLYMeshFileLoader.cpp" />
     <ClCompile Include="CSkinnedMesh.cpp" />
     <ClCompile Include="CSTLMeshFileLoader.cpp" />
@@ -45,7 +38,6 @@
     <ClCompile Include="CBillboardSceneNode.cpp" />
     <ClCompile Include="CCameraSceneNode.cpp" />
     <ClCompile Include="CCubeSceneNode.cpp" />
-    <ClCompile Include="CEmptySceneNode.cpp" />
     <ClCompile Include="CMeshSceneNode.cpp" />
     <ClCompile Include="CSkyBoxSceneNode.cpp" />
     <ClCompile Include="CSkyDomeSceneNode.cpp" />
@@ -73,18 +65,12 @@
     <ClCompile Include="CNullDriver.cpp" />
     <ClCompile Include="CImageWriterBMP.cpp" />
     <ClCompile Include="CImageWriterJPG.cpp" />
-    <ClCompile Include="CImageWriterPCX.cpp" />
     <ClCompile Include="CImageWriterPNG.cpp" />
-    <ClCompile Include="CImageWriterPPM.cpp" />
-    <ClCompile Include="CImageWriterPSD.cpp" />
     <ClCompile Include="CImageWriterTGA.cpp" />
     <ClCompile Include="CImageLoaderBMP.cpp" />
     <ClCompile Include="CImageLoaderDDS.cpp" />
     <ClCompile Include="CImageLoaderJPG.cpp" />
-    <ClCompile Include="CImageLoaderPCX.cpp" />
     <ClCompile Include="CImageLoaderPNG.cpp" />
-    <ClCompile Include="CImageLoaderPPM.cpp" />
-    <ClCompile Include="CImageLoaderPSD.cpp" />
     <ClCompile Include="CImageLoaderRGB.cpp" />
     <ClCompile Include="CImageLoaderTGA.cpp" />
     <ClCompile Include="CBurningShader_Raster_Reference.cpp" />
@@ -227,10 +213,16 @@
     <ClCompile Include="CForsythVertexCacheOptimizer.cpp" />
     <ClCompile Include="COverdrawMeshOptimizer.cpp" />
     <ClCompile Include="COpenGLVAOSpec.cpp" />
-    <ClCompile Include="CAssetManager.cpp" />
     <ClCompile Include="COpenGL1DTexture.cpp" />
     <ClCompile Include="COpenGL1DTextureArray.cpp" />
-    <ClCompile Include="COpenGLCubemapArrayTexture.cpp" />  
+    <ClCompile Include="COpenGLCubemapArrayTexture.cpp" />
+    <ClCompile Include="CGLSLFunctionGenerator.cpp" />
+    <ClCompile Include="IReferenceCounted.cpp" />
+    <ClCompile Include="IAssetLoader.cpp" />
+    <ClCompile Include="IAssetManager.cpp" />
+    <ClCompile Include="IAsset.cpp" />
+    <ClCompile Include="IrrlichtDevice.cpp" />
+    <ClCompile Include="IAssetWriter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\EDriverFeatures.h" />
@@ -299,7 +291,6 @@
     <ClInclude Include="..\..\include\IXMLWriter.h" />
     <ClInclude Include="..\..\include\path.h" />
     <ClInclude Include="..\..\include\CDynamicMeshBuffer.h" />
-    <ClInclude Include="..\..\include\CIndexBuffer.h" />
     <ClInclude Include="..\..\include\CMeshBuffer.h" />
     <ClInclude Include="..\..\include\CVertexBuffer.h" />
     <ClInclude Include="..\..\include\ECullingTypes.h" />
@@ -391,8 +382,6 @@
     <ClInclude Include="..\..\include\IGUITreeView.h" />
     <ClInclude Include="..\..\include\IGUIWindow.h" />
     <ClInclude Include="..\..\include\vectorSIMD.h" />
-    <ClInclude Include="CDefaultSceneNodeAnimatorFactory.h" />
-    <ClInclude Include="CDefaultSceneNodeFactory.h" />
     <ClInclude Include="CGeometryCreator.h" />
     <ClInclude Include="CIrrDeviceWin32.h" />
     <ClInclude Include="CMeshCache.h" />
@@ -407,12 +396,8 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
     <ClInclude Include="Octree.h" />
-    <ClInclude Include="CSMFMeshFileLoader.h" />
     <ClInclude Include="C3DSMeshFileLoader.h" />
-    <ClInclude Include="CAnimatedMeshHalfLife.h" />
     <ClInclude Include="CB3DMeshFileLoader.h" />
-    <ClInclude Include="CCSMLoader.h" />
-    <ClInclude Include="CDMFLoader.h" />
     <ClInclude Include="CLMTSMeshFileLoader.h" />
     <ClInclude Include="CLWOMeshFileLoader.h" />
     <ClInclude Include="CMS3DMeshFileLoader.h" />
@@ -420,7 +405,6 @@
     <ClInclude Include="CMY3DMeshFileLoader.h" />
     <ClInclude Include="COBJMeshFileLoader.h" />
     <ClInclude Include="COCTLoader.h" />
-    <ClInclude Include="COgreMeshFileLoader.h" />
     <ClInclude Include="CPLYMeshFileLoader.h" />
     <ClInclude Include="CSkinnedMesh.h" />
     <ClInclude Include="CSTLMeshFileLoader.h" />
@@ -430,7 +414,6 @@
     <ClInclude Include="CBillboardSceneNode.h" />
     <ClInclude Include="CCameraSceneNode.h" />
     <ClInclude Include="CCubeSceneNode.h" />
-    <ClInclude Include="CEmptySceneNode.h" />
     <ClInclude Include="CMeshSceneNode.h" />
     <ClInclude Include="CSkyBoxSceneNode.h" />
     <ClInclude Include="CSkyDomeSceneNode.h" />
@@ -467,18 +450,12 @@
     <ClInclude Include="IImagePresenter.h" />
     <ClInclude Include="CImageWriterBMP.h" />
     <ClInclude Include="CImageWriterJPG.h" />
-    <ClInclude Include="CImageWriterPCX.h" />
     <ClInclude Include="CImageWriterPNG.h" />
-    <ClInclude Include="CImageWriterPPM.h" />
-    <ClInclude Include="CImageWriterPSD.h" />
     <ClInclude Include="CImageWriterTGA.h" />
     <ClInclude Include="CImageLoaderBMP.h" />
     <ClInclude Include="CImageLoaderDDS.h" />
     <ClInclude Include="CImageLoaderJPG.h" />
-    <ClInclude Include="CImageLoaderPCX.h" />
     <ClInclude Include="CImageLoaderPNG.h" />
-    <ClInclude Include="CImageLoaderPPM.h" />
-    <ClInclude Include="CImageLoaderPSD.h" />
     <ClInclude Include="CImageLoaderRGB.h" />
     <ClInclude Include="CImageLoaderTGA.h" />
     <ClInclude Include="CDepthBuffer.h" />
@@ -565,7 +542,6 @@
     <ClInclude Include="COpenGLVAOSpec.h" />
     <ClInclude Include="..\..\include\CConcurrentObjectCache.h" />
     <ClInclude Include="..\..\include\CObjectCache.h" />
-    <ClInclude Include="CAssetManager.h" />
     <ClInclude Include="..\..\include\IAssetManager.h" />
   </ItemGroup>
   <ItemGroup>
