Fix crash in server target from CSceneManager, project file updates and more sane block size spec in instanced mesh

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -362,6 +362,7 @@
 		<Unit filename="../../include/irr/core/alloc/AlignedBase.h" />
 		<Unit filename="../../include/irr/core/alloc/AllocatorTrivialBases.h" />
 		<Unit filename="../../include/irr/core/alloc/ContiguousPoolAddressAllocator.h" />
+		<Unit filename="../../include/irr/core/alloc/GeneralpurposeAddressAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/IAddressAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/IAllocator.h" />
 		<Unit filename="../../include/irr/core/alloc/LinearAddressAllocator.h" />
